# E.D.A-Eric-Digital-Assitant-

./: .abacus.donotdelete  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EJEMPLOS_CAPACIDADES_EDA.txt  GUIA_LIBRERIAS_Y_EXTENSIONES.md  GUIA_NOVATO_CODIGO.md  INICIAR_ASISTENTE.bat  INSTALAR_EDA.cmd  Iniciar_EDA.bat  Iniciar_EDA_Silencioso.vbs  Instalar_y_Lanzar_EDA.bat  LICENSE  README.md  Setup_EDA_Debug.bat  Setup_EDA_SinOllama.bat  Setup_y_Lanzar_EDA.bat  actions.py  bluetooth_manager.py  clipboard.py  config.py  core.py  evolution.py  file_manager.py  gui.py  health_check.py  iniciar.sh  install_deps.py  integration_hub.py  intent_tests_ci_output.json  logger.py  main.py  memory.py  mouse_keyboard.py  multimodal.py  nlp_utils.py  obs_controller.py  optimizer.py  pyproject.toml  (+13 more)
config/: README.md  remote_acl.json
docs/: 00_EMPIEZA_AQUI.md  01_MAPA_DEL_PROYECTO.md  02_PRIMERA_CONTRIBUCION.md  CHANGELOG.md  CHANGELOG_PROJECT.md  CLEANUP_CANDIDATES.md  CONTRIBUTING_PROJECT.md  EJEMPLOS_CAPACIDADES_EDA.txt  GUIA_LIBRERIAS_Y_EXTENSIONES.md  GUIA_NOVATO_CODIGO.md  README.md  operational_runbook  operational_runbook.md  spotify_integration.md  triggers.md  usage_screen_and_files.md
eda/: __init__.py  actions.py  clipboard.py  config.py  core.py  evolution.py  file_manager.py  gui.py  health_check.py  improvement_planner.py  integration_hub.py  logger.py  memory.py  multimodal.py  nlp_utils.py  objective_planner.py  obs_controller.py  optimizer.py  remote_llm.py  scheduler.py  spotify_web.py  utils.py  voice.py  web_search.py  web_solver.py
legacy/: README.md
(+145 files in other folders)
